# otus_11_homework

./: .travis.yml  CMakeLists.txt  README.md  async.cpp  async.h  commands.h  consumer_file.cpp  consumer_file.h  event_processor.cpp  event_processor.h  lib.h  main.cpp  producer.cpp  producer.h  techstack.md  techstack.yml  tests.cpp
